added 1 citation in .bib & .tex file

--- a/labs/gc-fid/lab_report_1.tex
+++ b/labs/gc-fid/lab_report_1.tex
@@ -38,7 +38,8 @@ Lab Instructor: & Kevin Stroski % Instructor/supervisor
 %----------------------------------------------------------------------------------------
 
 \begin{abstract}
-	The main objective of this experiment was to separate polycyclic aromatic hydrocarbons (PAHs). This was done with the help of a gas chromatography equipped with a flame ionization detector \cite{Smith:2012qr}. 
+	
+	The main objective of this experiment was to separate polycyclic aromatic hydrocarbons (PAHs). This was done with the help of a gas chromatography equipped with a flame ionization detector \cite{Smith:2012qr}. Also, check out the this citation \cite{pah-in-soil}.
 \end{abstract}
 
 \newpage
