--- a/labs/gc-fid/sample.bib
+++ b/labs/gc-fid/sample.bib
@@ -1,7 +1,20 @@
-@BOOK{Smith:2012qr,
+@book{Smith:2012qr,
    title = {Chemistry},
    publisher = {Publisher},
    author = {Smith, J.~M. and Jones, A.~B.},
    year = {2012},
-   edition = {7th},
+   edition = {7th}
+}
+
+@article{pah-in-soil,
+	author ="Nam, Jae Jak and Sweetman, Andrew J. and Jones, Kevin C.",
+	title  ="Polynuclear aromatic hydrocarbons (PAHs) in global background soils",
+	journal  ="J. Environ. Monit.",
+	year  ="2009",
+	volume  ="11",
+	issue  ="1",
+	pages  ="45-48",
+	publisher  ="The Royal Society of Chemistry",
+	doi  ="10.1039/B813841A",
+	url  ="http://dx.doi.org/10.1039/B813841A"
 }
