did 25% of my methods section

--- a/labs/gc-fid/lab_report_1.tex
+++ b/labs/gc-fid/lab_report_1.tex
@@ -39,7 +39,7 @@ Lab Instructor: & Kevin Stroski % Instructor/supervisor
 %----------------------------------------------------------------------------------------
 
 \begin{abstract}
-The main objective of this experiment was to separate polynuclear aromatic hydrocarbons (PAHs). This was done with the help of a gas chromatography equipped with a flame ionization detector \cite{Smith:2012qr}. Also, check out the this citation \cite{pah-in-soil}.
+The main objective of this experiment was to modify the parameters of a GC-FID in order to efficiently separate a mixture of PAHs. This was done with the help of a gas chromatography equipped with a flame ionization detector \cite{Smith:2012qr}. Also, check out the this citation \cite{pah-in-soil}.
 
 This is working!!! I am the King!!! I will live forever!!!
 \end{abstract}
@@ -101,15 +101,18 @@ However, equation \ref{another_resolution_equ} can only be used for peaks of sim
 %----------------------------------------------------------------------------------------
 
 \section{Methods and Instrumentation}
-The analysis of the PAH mixture was performed on a Agilent 7890A gas chromatograph, which was equipped with an FID. Before each analysis, the apparatus was left on standby so that the flame was able to reach the desired temperature for that particular analysis. In addition, each analysis was conducted with the injection mode at splitless and the carrier gas was \ce{He}?
+The analysis of the PAH mixture was performed on an Agilent 7890A GC, which was equipped with an FID. Before each analysis, the apparatus was left on standby so that the flame was able to reach the desired temperature for that particular analysis. The separation was performed on an Agilent 122-5032 J\&W DB-5 capillary column, \SI{30}{m} length $\times$ \SI{0.25}{mm} i.d. $\times$ \SI{0.25}{\mu} thickness, \SI{7}{inch} cage. In addition, each analysis was conducted with the injection mode at splitless and the carrier gas was \ce{He}?
 
-For the first method, the oven temperature was held at \textit{something}\ldots
+For the first method, named ?, the oven temperature was initially set at \ang{110}\si{C} for \SI{0.5}{min}, increased by \SI{7.5}{\degreeCelsius} all the way to \SI{300}{\degreeCelsius}; it was held at this temperature for 40 minutes, and the total runtime for this method was \SI{65.83}{\minute}. The results are shown in Figure ? and the integration of each peak is shown in Table ?
 
 %----------------------------------------------------------------------------------------
 %	SECTION 5
 %----------------------------------------------------------------------------------------
 
 \section{Results and Discussion}
+As shown in Figure ?
+
+In conclusion, blah blah blah \ldots
 
 %----------------------------------------------------------------------------------------
 %	SECTION 6 (BIBLIOGRAPHY)
@@ -126,35 +129,24 @@ For the first method, the oven temperature was held at \textit{something}\ldots
 
 \subsection{Calculations}
 
-\begin{itemize}
-	\item Mass required to make \textbf{\SI{10}{mL}} of \SI{1}{\frac{mg}{mL}} (\SI{1000}{ppm}) naphthalene in toulene
-
-	Calculation is here.
-
-	\item Determining the plate height for peak 7
-
-	Calculation is here.
-
-	\item Determining the number of theoretical plates for peak 7
-
-	Calculation is here.
-
-	\item Determining the resolution for the pair of peaks 5 and 6
-
-	Final calculation is here.
-\end{itemize}
-
 \begin{description}
 	\item[Mass required to make \textbf{\SI{10}{mL}} of \SI{1}{\frac{mg}{mL}} (\SI{1000}{ppm}) naphthalene in toulene] \hfill \\
 	Calculation is here.
 	\item[Determining the plate height for peak 7] \hfill \\
-	Calculation is here.
+	Peak 7 was identified as fluoranthene.
 	\item[Determining the number of theoretical plates for peak 7] \hfill \\
-	Calculation is here.
-	\item[Determining the resolution for the pair of peaks 5 and 6] \hfill \\
-	Calculation is here.
+	Peak 7 was identified as fluoranthene.
+	\begin{equation} \label{n_equ}
+		N = 5.545\Bigg(\frac{t_r}{w_\frac{1}{2}}\Bigg)^2 = 16\Bigg(\frac{t_r}{w_b}\Bigg)^2
+	\end{equation}
+	In equation \ref{n_equ}, \(N\) represents the number of theoretical plates; \(w_\frac{1}{2}\) and \(w_b\) are the widths of the peak at half-height and at the base, respectively.
+	\item[Determining the resolution for peaks 5 and 6] \hfill \\
+	Peaks 5 and 6 were identified as phenanthrene and anthracene.
+	\begin{equation} \label{resolution_equ}
+		R = \frac{21't_r}{w_{b_1} + w_{b_2}}
+	\end{equation}
+	\(t_r\) in equation \ref{resolution_equ} denotes the retention time of the corresponding peak.
 \end{description}
-
 
 \subsection{Chromatograms}
 There are ? pages of chromatograms that were collected during this experiment.
