completed 90% of methods & instru., results, & appendix

--- a/labs/gc-fid/sample.bib
+++ b/labs/gc-fid/sample.bib
@@ -1,9 +1,12 @@
-@book{Smith:2012qr,
-   title = {Chemistry},
-   publisher = {Publisher},
-   author = {Smith, J.~M. and Jones, A.~B.},
-   year = {2012},
-   edition = {7th}
+@book{harris_quantitative_2010,
+	address = {New York},
+	edition = {8th ed},
+	title = {Quantitative chemical analysis},
+	isbn = {9781429218153},
+	publisher = {W.H. Freeman and Co},
+	author = {Harris, Daniel C.},
+	year = {2010},
+	keywords = {Chemistry, Analytic, Quantitative}
 }
 
 @article{pah-in-soil,
@@ -18,3 +21,4 @@
 	doi  ="10.1039/B813841A",
 	url  ="http://dx.doi.org/10.1039/B813841A"
 }
+
