--- a/labs/gc-fid/lab_report_1.tex
+++ b/labs/gc-fid/lab_report_1.tex
@@ -39,9 +39,8 @@ Lab Instructor: & Kevin Stroski % Instructor/supervisor
 %----------------------------------------------------------------------------------------
 
 \begin{abstract}
-The main objective of this experiment was to modify the parameters of a GC-FID in order to efficiently separate a mixture of PAHs. This was done with the help of a gas chromatography equipped with a flame ionization detector \cite{Smith:2012qr}. Also, check out the this citation \cite{pah-in-soil}.
+	The main objective of this experiment was to modify the parameters of a GC-FID in order to efficiently separate a mixture of PAHs, that is, an appropriate resolution was achieved between the peaks. This was done \textbf{DELETE ->} with the help of a gas chromatography equipped with a flame ionization detector \cite{harris_quantitative_2010}. Also, check out the this citation \cite{pah-in-soil}.
 
-This is working!!! I am the King!!! I will live forever!!!
 \end{abstract}
 
 \newpage
@@ -53,9 +52,9 @@ This is working!!! I am the King!!! I will live forever!!!
 \section{Introduction}
 Separation is important and stuff.
 
-The main objective of this experiment is to separate polynuclear aromatic hydrocarbons (PAHs) with the help of a high resolution gas chromatography (GC) that is equipped with a flame ionization detector. The initial part of the experiment involves configuring the GC in order to get it ready for PAH analysis. In addition, the resolution of the GC was also optimized in order to get the best resolution possible for the resulting chromatogram. This part involves altering the temperature of the detector, injector and oven. Furthermore, solute focusing methods, like for instance, solvent effects or cold trapping, can be taken advantage of in order to increase the resolution of the chromatogram. These methods involve the stationary phase "trapping" the solutes while the solvent evaporates through the column. And when the temperature is high enough, the solutes are released and are free to be carried down the column by the carrier gas.
+The main objective of this experiment is to separate polynuclear aromatic hydrocarbons (PAHs) with the help of a high resolution gas chromatography (GC) that is equipped with a flame ionization detector. The initial part of the experiment involves setting up the parameters of the GC and repeatedly analyzing naphthalene twice and toluene so that the reproducibility of the GC has been established. In addition, the resolution of the GC was also optimized in order to get the best resolution possible for the resulting chromatogram. This part involves altering the temperature of the detector, injector and oven. Furthermore, solute focusing methods, like for instance, solvent effects or cold trapping, can be taken advantage of in order to increase the resolution of the chromatogram. These methods involve the stationary phase "trapping" the solutes while the solvent evaporates through the column. And when the temperature is high enough, the solutes are released and are free to be carried down the column by the carrier gas.
 
-In a typical gas chromatography (GC), the mobile phase, in which \ce{He} is most commonly used as the carrier gas, transports the gaseous analyte throughout the column. Furthermore, due to partitioning, the individual components are separated because of its interaction with the stationary phase, which can be either a solid or a nonvolatile liquid which is bonded on the inside of the column itself.
+In a typical GC, the mobile phase, in which \ce{He} is most commonly used as the carrier gas, transports the gaseous analyte throughout the column. Furthermore, due to partitioning, the individual components are separated because of its interaction with the stationary phase, which can be either a solid or a nonvolatile liquid which is bonded on the inside of the column itself.
 
 One of the detectors that is available for the GC is called the flame ionization detector (FID). The type of detector works best when the carrier gas is \ce{N2} as it greatly decreases its detection limit, compared to \ce{He}. In addition, the FID is sensitive to most hydrocarbons, making it the ideal detector to use where PAHs are concerned.
 
@@ -89,11 +88,11 @@ However, equation \ref{another_resolution_equ} can only be used for peaks of sim
 
 \begin{description}
 	\item[First Objective] \hfill \\
-	Optimize and assess vital GC parameters for the separation of PAHs with the help of high resolution gas chromatography.
+		Optimize and assess vital GC parameters for the separation of PAHs with the help of high resolution gas chromatography.
 	\item[Second Objective] \hfill \\
-	Finding out the plate height as well as the number of theoretical plates for peak 7 in the chromatogram of PAH mixture.
+		Finding out the plate height as well as the number of theoretical plates for peak \num{7} (fluoranthene) in the chromatogram of PAH mixture.
 	\item[Third Objective] \hfill \\
-	Determining the resolution of peaks 5 and 6 in the chromatogram of PAH mixture
+		Determining the resolution of peaks \num{5} (phenanthrene) and \num{6} (anthracene) in the chromatogram of PAH mixture
 \end{description}
  
 %----------------------------------------------------------------------------------------
@@ -101,16 +100,32 @@ However, equation \ref{another_resolution_equ} can only be used for peaks of sim
 %----------------------------------------------------------------------------------------
 
 \section{Methods and Instrumentation}
-The analysis of the PAH mixture was performed on an Agilent 7890A GC, which was equipped with an FID. Before each analysis, the apparatus was left on standby so that the flame was able to reach the desired temperature for that particular analysis. The separation was performed on an Agilent 122-5032 J\&W DB-5 capillary column, \SI{30}{m} length $\times$ \SI{0.25}{mm} i.d. $\times$ \SI{0.25}{\mu} thickness, \SI{7}{inch} cage. In addition, each analysis was conducted with the injection mode at splitless and the carrier gas was \ce{He}?
 
-For the first method, named ?, the oven temperature was initially set at \ang{110}\si{C} for \SI{0.5}{min}, increased by \SI{7.5}{\degreeCelsius} all the way to \SI{300}{\degreeCelsius}; it was held at this temperature for 40 minutes, and the total runtime for this method was \SI{65.83}{\minute}. The results are shown in Figure ? and the integration of each peak is shown in Table ?
+\subsection{Chemicals}
+Toulene (HPLC grade chemical, LOT: 591103-A6, CAS: 108-88-3), naphthalene (Fisher Scientific, LOT: 895861, CAS: 91-20-3), and a mixture of PAH (PAH mix 1, LOT w00382; PAH mix 2, CD-1661; Ultra EPA 2138N-1, EOA 2139N-1, ACN) were used in this experiment.
+
+\subsection{Instrumentation}
+The analysis of the PAH mixture was performed on an Agilent 6890N Network GC System (by Agilent Technologies), equipped with an FID detector. Before each analysis, the apparatus was left on standby so that the flame was able to reach the desired temperature for that particular analysis. The separation was performed on an Agilent 122-5032 J\&W DB-5 capillary column, \SI{30}{m} length $\times$ \SI{0.25}{mm} i.d. $\times$ \SI{0.25}{\mu{}m} thickness, \SI{7}{inch} cage. Its stationary phase was 5$\%$-Phenyl)-methylpolysiloxane (DB-5) (citation needed?). In addition, each analysis was conducted with the injection mode at splitless and the carrier gas was \ce{He}?
+
+\subsection{Methods}
+Initially, analyses were performed on toluene once and then on naphthalene twice because the GC had to be set up and checked if the precision was up to standards before proceeding with the analyses of a mixture of PAH. The name of the method used for these analyses was ``RJWEEK1.M''. Hereafter, all the remaining separations were performed on this mixture.
+
+For the first method, which was named ``RJ1WEEK2.M'', the oven temperature was initially set at \ang{110}\si{C} for \SI{0.5}{min}, and it was increased by \SI{7.5}{\frac{\degreeCelsius}{min}} all the way to \SI{300}{\degreeCelsius}; and it was held at this temperature for 40 minutes. The total runtime for this method was \SI{65.83}{\minute}. 
+
+In the second method, named ``RJ2WEEK2.M'', the oven temperature was set at \ang{75}\si{C} for \SI{2}{min}, it was increased by \SI{5}{\frac{\degreeCelsius}{min}} all the way to \SI{300}{\degreeCelsius}; it was held at this temperature for 40 minutes. And the total runtime for the second method was \SI{87}{\minute}. 
+
+Just before setting the parameters for the final method, the GC-SOS\textsuperscript{\textregistered} was used to stimulate a separation of the PAH via gas chromatography, using parameters that was retrieved from the previous runs, including the two methods that were used on the PAH mixture (``RJ1WEEK2.M'' and ``RJ2WEEK2.M''). Through trial and error, it was realized that the optimum temperature conditions for the separation of the PAH mixture, comprimising between resolution and time taken, are as follows: the initial temperature was set to \SI{75}{\degreeCelsius}; it was held at this temperature for \SI{1}{min}; it was then increased at a rate of \SI{10}{\frac{\degreeCelsius}{min}} all the way to \SI{130}{\degreeCelsius}, and it was held at this temperature for \SI{25}{min}; finally, the temperature was again increased at a rate of \SI{12}{\frac{\degreeCelsius}{min}} until it peaked at \SI{250}{\degreeCelsius}, and it was held at this temperature for \SI{21}{min}. The simulated chromatogram, its temperature parameters, the column conditions and the retention data are all shown in Figure 7. These very same temperature conditions/parameters were set up into the method called "OPTRJ.M", and a final analysis was initiated on the PAH mixture.
 
 %----------------------------------------------------------------------------------------
 %	SECTION 5
 %----------------------------------------------------------------------------------------
 
 \section{Results and Discussion}
-As shown in Figure ?
+
+\subsection{Results}
+The chromatograms for the analyses of naphthalene and toulene are given in Figures 1, 2 (both are for naphthalene) and 3 (toluene), respectively. The integration results for the chromatogram of the analysis of the PAH mixture using the method ``RJ1WEEK2.M'' is shown in Table 1, while the chromatogram is shown in Figure 4. Also, the chromatogram for the second analysis of PAH using the method ``RJ2WEEK2.M'' is shown in Figure 5, and its integration results are shown in Table 2. Finally, the chromatogram for the optimized analysis of PAH (method name was ``OPTRJ.M'') is shown in Figure 6, and its integration results are shown in Table 3. Note that in each table, there are numbers that are encircled next to the peak number; this is to show which peak represents which hydrocarbon. The peaks that are not next to the numbers are considered noise. OK?
+
+\subsection{Discussion}
 
 In conclusion, blah blah blah \ldots
 
@@ -130,26 +145,63 @@ In conclusion, blah blah blah \ldots
 \subsection{Calculations}
 
 \begin{description}
-	\item[Mass required to make \textbf{\SI{10}{mL}} of \SI{1}{\frac{mg}{mL}} (\SI{1000}{ppm}) naphthalene in toulene] \hfill \\
-	Calculation is here.
-	\item[Determining the plate height for peak 7] \hfill \\
+\item[Mass required to make \textbf{\SI{10}{mL}} of \SI{1}{\frac{mg}{mL}} (\SI{1000}{ppm}) naphthalene in toulene] \hfill \\
+	Note: 
+\begin{gather*}
+\SI{1}{ppm} = \SI{1}{\frac{\mu}{mL}} = \SI{1}{\frac{mg}{L}} and \\
+\SI{1}{ppb} = \SI{1}{\frac{ng}{mL}} = \SI{1}{\frac{\mu}{L}} \\
+\\
+\\
+	M_{r_{naphthalene}} = \SI{128.17}{g.mol^{-1}} \\
+	\SI{1}{\frac{mg}{mL}} = \SI{1}{g.L^{-1}} = \SI{0.001}{g.mL^{-1}} \\
+	Molarity = \frac{\SI{0.001}{g.mL^{-1}}}{\SI{128.17}{g.mol^{-1}}} \\
+	= \SI{7.8021e-6}{\frac{mol}{mL}} \\
+	moles = vol \times conc \\
+	= \SI{10}{mL} \times \SI{7.8021e-6}{\frac{mol}{mL}} \\
+	= \SI{7.8021e-5}{mol} \\
+\end{gather*}
+	Mass of naphthalene required 
+\begin{gather*}
+= \SI{7.8021e-6}{mol} \times \SI{128.17}{g.mol^{-1}} \\
+\end{gather*}
+\SI{0.01}{g} of naphthalene is required
+
+\item[Determining the number of theoretical plates for peak 7] \hfill \\
 	Peak 7 was identified as fluoranthene.
-	\item[Determining the number of theoretical plates for peak 7] \hfill \\
-	Peak 7 was identified as fluoranthene.
+
 	\begin{equation} \label{n_equ}
 		N = 5.545\Bigg(\frac{t_r}{w_\frac{1}{2}}\Bigg)^2 = 16\Bigg(\frac{t_r}{w_b}\Bigg)^2
 	\end{equation}
+
 	In equation \ref{n_equ}, \(N\) represents the number of theoretical plates; \(w_\frac{1}{2}\) and \(w_b\) are the widths of the peak at half-height and at the base, respectively.
-	\item[Determining the resolution for peaks 5 and 6] \hfill \\
-	Peaks 5 and 6 were identified as phenanthrene and anthracene.
-	\begin{equation} \label{resolution_equ}
-		R = \frac{21't_r}{w_{b_1} + w_{b_2}}
+
+	\begin{gather*}
+		N = 5.545\Bigg(\frac{t_r}{w_\frac{1}{2}}\Bigg)^2 \\
+		N = \num{5.545} \times \Bigg(\frac{\SI{25.393}{min}}{\SI{0.1361}{min}}\Bigg)^2 \\
+		N = \SI{193024.8952}{plates} \approx \SI{193025}{plates}
+	\end{gather*}
+
+\item[Determining the plate height for peak 7] \hfill \\
+	Peak 7 was identified as fluoranthene.
+
+	\begin{equation} \label{plate:height}
+		H = \frac{L}{N}
 	\end{equation}
-	\(t_r\) in equation \ref{resolution_equ} denotes the retention time of the corresponding peak.
+
+		In equation \ref{plate:height}, $H$ represents plate height, $L$ represents the length of the column, and $N$ is the number of theoretical plates \cite{harris_quantitative_2010}.
+
+\item[Determining the resolution for peaks 5 and 6] \hfill \\
+Peaks 5 and 6 were identified as phenanthrene and anthracene.
+
+\begin{equation} \label{resolution_equ}
+R = \frac{21't_r}{w_{b_1} + w_{b_2}}
+\end{equation}
+
+\(t_r\) in equation \ref{resolution_equ} denotes the retention time of the corresponding peak.
 \end{description}
 
 \subsection{Chromatograms}
-There are ? pages of chromatograms that were collected during this experiment.
+There are 10 pages of printouts that were collected during this experiment, 6 of which are chromatograms.
 
 
 %----------------------------------------------------------------------------------------
