--- a/labs/gc-fid/sample.bib
+++ b/labs/gc-fid/sample.bib
@@ -22,3 +22,66 @@
 	url  ="http://dx.doi.org/10.1039/B813841A"
 }
 
+@article{sft-pah,
+ ISSN = {00447447, 16547209},
+ URL = {http://www.jstor.org/stable/25547797},
+ author = {Staffan Lundstedt and Paul A. White and Christine L. Lemieux and Krista D. Lynes and Iain B. Lambert and Lars Öberg and Peter Haglund and Mats Tysklind},
+ journal = {Ambio},
+ number = {6},
+ pages = {475--485},
+ publisher = {[Springer, Royal Swedish Academy of Sciences]},
+ title = {Sources, Fate, and Toxic Hazards of Oxygenated Polycyclic Aromatic Hydrocarbons (PAHs) at PAH-Contaminated Sites},
+ volume = {36},
+ year = {2007}
+}
+
+@article{iupac-pah,
+Author = {Ehrenhauser, Franz S.},
+ISSN = {10406638},
+Journal = {Polycyclic Aromatic Compounds},
+Keywords = {ORGANIC chemistry nomenclature, POLYCYCLIC aromatic hydrocarbons, ORGANIC compound derivatives, ORGANIC chemistry, POLLUTANTS, IUPAC, nomenclature, PAH},
+Number = {2/4},
+Pages = {161 - 176},
+Title = {PAH and IUPAC Nomenclature.},
+Volume = {35},
+URL = {http://search.ebscohost.com.uwinnipeg.idm.oclc.org/login.aspx?direct=true&db=aph&AN=108393825},
+Year = {2015},
+}
+
+@article{coffee-pah,
+Author = {Duedahl-Olesen, L. and Navaratnam, M. A. and Jewula, J. and Jensen, A. H.},
+ISSN = {10406638},
+Journal = {Polycyclic Aromatic Compounds},
+Keywords = {POLYCYCLIC aromatic hydrocarbons, TEA -- Composition, COFFEE composition, GEL permeation chromatography, DETECTION limit, EXTRACTION (Chemistry), BENZOPYRENE, benzo[a]pyrene, gas chromatography-mass spectrometry (GC-MS), PAH4, polycyclic aromatic hydrocarbons (PAHs), EUROPEAN Food Safety Authority},
+Number = {1},
+Pages = {74 - 90},
+Title = {PAH in Some Brands of Tea and Coffee.},
+Volume = {35},
+URL = {http://search.ebscohost.com.uwinnipeg.idm.oclc.org/login.aspx?direct=true&db=aph&AN=99463049},
+Year = {2015},
+}
+
+@book{vitha_chromatography:_2017,
+	address = {Hoboken, New Jersey},
+	title = {Chromatography: principles and instrumentation},
+	isbn = {9781119270881 9781119270898},
+	shorttitle = {Chromatography},
+	publisher = {Wiley},
+	author = {Vitha, Mark F.},
+	year = {2017},
+	keywords = {Chromatographic analysis, Gas chromatography, Liquid chromatography}
+}
+
+@book{sparkman_gas_2011,
+	address = {Burlington, MA},
+	title = {Gas chromatography and mass spectrometry: a practical guide},
+	isbn = {9780080920153},
+	shorttitle = {Gas chromatography and mass spectrometry},
+	url = {http://site.ebrary.com/id/10483481},
+	language = {English},
+	urldate = {2018-10-16TZ},
+	publisher = {Academic Press},
+	author = {Sparkman, O. David and Penton, Zelda and Kitson, Fulton G},
+	year = {2011},
+	note = {OCLC: 742354272}
+}
